# cis

./: CMakeLists.txt  LICENSE  README.md  cis.hpp  example.cpp
cmake/: config.cmake.in
test/: CMakeLists.txt  main.cpp
