set(CIS_UNITTEST_TARGET_NAME "cis_unittests")
add_executable(${CIS_UNITTEST_TARGET_NAME}
  ../cis.hpp
  main.cpp
)
set_target_properties(${CIS_UNITTEST_TARGET_NAME} PROPERTIES
  CXX_STANDARD 14
  CXX_STANDARD_REQUIRED ON
)
target_link_libraries(${CIS_UNITTEST_TARGET_NAME} ${CIS_TARGET_NAME})

add_test(NAME "${CIS_UNITTEST_TARGET_NAME}"
	COMMAND ${CIS_UNITTEST_TARGET_NAME}
	WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}
)
